<?xml version="1.0"?>
<package format="2">
  <name>vtc_ue_bringup</name>
  <version>0.0.0</version>
  <description>The vtc_ue_bringup package</description>

  <maintainer email="tiryoh@gmail.com">Daisuke Sato</maintainer>
  <author email="tiryoh@gmail.com">Daisuke Sato</author>

  <license>Apache License 2.0</license>

  <url type="website">http://github.com/Tiryoh/vtc_ue_bringup/wiki</url>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>cage_ros_bridge</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>timed_roslaunch</exec_depend>

  <export>

  </export>
</package>
